--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 numpy==1.19.5
 setproctitle==1.2.2
-torch==1.8.0.dev20210113+cu110
-torchvision==0.9.0.dev20210113+cu110
+torch==1.8.0
+torchvision==0.9.0
 tqdm==4.56.2
 transformers==2.8.0
